2005-02-14  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkText.c: 
	* generic/tkText.h: 
	* generic/tkTextDisp.c: 
	* generic/tkTextIndex.c: 
	* generic/tkTextBTree.c: 
	* doc/text.n:
	* tests/textDisp.test: 
	* tests/textIndex.test: fix of longstanding elide problem 
	when eliding a newline without eliding the entire logical 
	line. [Bug 443848]

2005-02-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/options.n: note -cursor {} behavior. [Bug 965618]

2005-02-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/all.tcl: Add a [package require Tk] so that a missing
	display causes an early failure and keeps the error trace short.
	Issue observed in [FRQ 11122147], even though that's unrelated.

2005-02-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/panedwindow.tcl (::tk::panedwindow::Cursor): check
	window existence on delayed call. [Bug 949792]

	* doc/text.n: note 'image' key in 'dump' command. [Bug 1115907]

	* win/tkWinWm.c (TkWinGetIcon): fix toplevel retrieval for
	determining icon ref (potential crash). [Bug 1105738]

	* generic/tkCanvBmap.c (ConfigureBitmap, ComputeBitmapBbox): Fixed
	possible crash with disabled bmap and bbox handling [Bug 1119460]
	(BitmapToPostscript): made aware of various bitmap types

	* unix/Makefile.in: remove SHLIB_LD_FLAGS (only for AIX, inlined
	* unix/tcl.m4:      into SHLIB_LD).  Combine AIX-* and AIX-5
	* unix/configure:   branches in SC_CONFIG_CFLAGS.
	Correct gcc builds for AIX-4+ and HP-UX-11.  autoconf-2.59 gen'd.

2005-02-09  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* tests/wm.test: Convert to use more tcltest2 features.

2005-02-07  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkCanvas.c (CanvasWidgetCmd): Fix stupid mistake in
	variable names, reported by Andreas Leitgeb.

2005-02-03  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkCanvas.c (GetStaticUids): New function to manage the